test/Fail/FunSort-X-Set-Prop.err
FunSort-X-Set-Prop.agda:6.13-18: error: [UnequalSorts]
Prop != Set _5
when checking that the expression A → B has type Set
